Added caching, encryption and models

--- a/env.sh.example
+++ b/env.sh.example
@@ -11,8 +11,11 @@ export DEMO_MYSQL_PASSWORD='root'
 export DEMO_MYSQL_DB='ost_demo_development'
 
 # Memcache Servers
-export DEMO_MEMCACHE_SERVERS='127.0.0.1:11211,127.0.0.1:11212'
+export DEMO_MEMCACHE_ENDPOINTS='127.0.0.1:11211,127.0.0.1:11212'
 export DEMO_MEMCACHE_KEY_PREFIX='ost_demo_'
 
-# OST Platform API Endpoint
-export DEMO_OST_API_ENDPOINT='https://api.ost.com/testnet/v2/'
+# AWS KMS Details (NOTE: if not provided data (Passwords, API secrets) will not be encrypted)
+export DEMO_AWS_KMS_ACCESS_KEY=''
+export DEMO_AWS_KMS_SECRET_KEY=''
+export DEMO_AWS_KMS_REGION=''
+export DEMO_AWS_KMS_KEY_ID=''
