--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 
 # Ignore env var.sh
 *.sh
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
