--- a/env.sh.example
+++ b/env.sh.example
@@ -14,8 +14,11 @@ export DEMO_MYSQL_DB='ost_demo_development'
 export DEMO_MEMCACHE_ENDPOINTS='127.0.0.1:11211,127.0.0.1:11212'
 export DEMO_MEMCACHE_KEY_PREFIX='ost_demo_'
 
-# AWS KMS Details (NOTE: if not provided data (Passwords, API secrets) will not be encrypted)
+# AWS KMS Details
 export DEMO_AWS_KMS_ACCESS_KEY=''
 export DEMO_AWS_KMS_SECRET_KEY=''
 export DEMO_AWS_KMS_REGION=''
 export DEMO_AWS_KMS_KEY_ID=''
+
+# Local Cipher key (32 chars long Alphanumeric string)
+export DEMO_LOCAL_CIPHER_KEY=''
