--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "axios": "^0.18.0",
+    "bignumber.js": "^8.1.1",
+    "jdenticon": "^2.1.1",
+    "qrcode.react": "^0.9.3",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.2.1"
