change memcache key prefix to avoid double '_'

--- a/env.sh.example
+++ b/env.sh.example
@@ -12,7 +12,7 @@ export DEMO_MYSQL_DB='ost_demo_development'
 
 # Memcache Servers
 export DEMO_MEMCACHE_ENDPOINTS='127.0.0.1:11211,127.0.0.1:11212'
-export DEMO_MEMCACHE_KEY_PREFIX='ost_demo_'
+export DEMO_MEMCACHE_KEY_PREFIX='ost_demo'
 
 # AWS KMS Details
 export DEMO_AWS_KMS_ACCESS_KEY=''
