1. Introduced Exception Notifier 2. Introduced custom handling for error pages. 3. Removed gems & code regarding asset handling & precompile. 4. Added ENV var for timezone

--- a/config/time_zone.yml
+++ b/config/time_zone.yml
@@ -1,5 +1,3 @@
 # Rails timezone for different environments
 rails_time_zones:
-  development: 'Asia/Kolkata'
-  staging: 'Etc/UTC'
-  production: 'Etc/UTC'
+  <%= Rails.env %>: <%= ENV["DEMO_APP_TIMEZONE"] %>
