added some ENV vars

--- a/env.sh.example
+++ b/env.sh.example
@@ -29,3 +29,9 @@ export DEMO_LOCAL_CIPHER_KEY=''
 # Exception Notification
 export DEMO_EXCEPTION_NOTIFICATION_FROM='from@example.com'
 export DEMO_EXCEPTION_NOTIFICATION_TO='to@example.com'
+
+# development / staging / production
+export RAILS_ENV=development
+
+# max Rails server threads
+export RAILS_MAX_THREADS=5
