--- a/env.sh.example
+++ b/env.sh.example
@@ -35,3 +35,6 @@ export RAILS_ENV=development
 
 # max Rails server threads
 export RAILS_MAX_THREADS=5
+
+# JWT secret key to communicate with Kit
+export KIT_SECRET_KEY='1somethingsarebetterkeptinenvironemntvariables'
