unlimited airdrop users

--- a/env.sh.example
+++ b/env.sh.example
@@ -38,3 +38,4 @@ export RAILS_MAX_THREADS=5
 
 # JWT secret key to communicate with Kit
 export KIT_SECRET_KEY='1somethingsarebetterkeptinenvironemntvariables'
+export UNLIMITED_AIRDROP_TOKENS="[1129]"
