--- a/env.sh.example
+++ b/env.sh.example
@@ -39,3 +39,5 @@ export RAILS_MAX_THREADS=5
 # JWT secret key to communicate with Kit
 export KIT_SECRET_KEY='1somethingsarebetterkeptinenvironemntvariables'
 export UNLIMITED_AIRDROP_TOKENS="[1129]"
+
+export DEMO_API_ENDPOINT='http://127.0.0.1:3000/demo'
